Updated error messaging on taglib example

--- a/lesson9-taglib/webstore/src/main/resources/messages.properties
+++ b/lesson9-taglib/webstore/src/main/resources/messages.properties
@@ -18,8 +18,8 @@ Min.Product.unitPrice.validation = Unit price is Invalid. It cannot have negativ
 Digits.Product.unitPrice.validation = Unit price is Invalid.It can have maximum of 2 digit fraction and 8 digit integer. 
 NotNull.Product.unitPrice.validation = Unit price is Invalid. It cannot be empty.
 
-com.packt.webstore.validator.ProductId.message = A product already exists with this product id.
-com.packt.webstore.validator.UnitsInStockValidator.message = You cannot add more than 99 units if the unit price is greater than 10000.
+com.eprogrammerz.examples.taglib.validator.ProductId.message = A product already exists with this product id.
+com.eprogrammerz.examples.taglib.validator.UnitsInStockValidator.message = You cannot add more than 99 units if the unit price is greater than 10000.
  
  
  ProductNotFoundException = No product found with the product ID = {1}
